First commit of chartley site redesign

--- a/src/components/Services/ServicesCards.astro
+++ b/src/components/Services/ServicesCards.astro
@@ -3,7 +3,7 @@ import { Image, type LocalImageProps } from "astro:assets";
 import Card from "../Cards/Card.astro";
 
 import { getCollection, getEntry } from 'astro:content';
-const content = await getCollection('services');
+const content = await getCollection('projects');
 
 
 
