--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -15,7 +15,7 @@ const { colour, hideBackground = false, hideBorder = false } = Astro.props;
 <style>
 	.btn {
 		/* BG modification factor when hovered */
-		--hover-bg: 0.8;
+		--hover-bg: 1.3;
 		/* Border modification colour */
 		--lightness-border-modifier: 0.8;
 		/* Border modification factor when hovered */
@@ -89,22 +89,22 @@ const { colour, hideBackground = false, hideBorder = false } = Astro.props;
 		background-color: var(--accent);
 		--border-color: hsl(
 			var(--accent-hue),
-			var(--primary-saturation),
-			calc(var(--primary-lightness) * var(--lightness-border-modifier))
+			var(--accent-saturation),
+			calc(var(--accent-lightness) * var(--lightness-border-modifier))
 		);
 	}
 
 	.accent:hover {
 		background-color: hsl(
 			var(--accent-hue),
-			var(--primary-saturation),
-			calc(var(--primary-lightness) * var(--hover-bg))
+			var(--accent-saturation),
+			calc(var(--accent-lightness) * var(--hover-bg))
 		);
 		--border-color: hsl(
 			var(--accent-hue),
-			var(--primary-saturation),
+			var(--accent-saturation),
 			calc(
-				var(--primary-lightness) *
+				var(--accent-lightness) *
 					var(--hover-lightness-border-modifier)
 			)
 		);
