--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -6,7 +6,7 @@ import MobileNav from "./MobileNav/MobileNav.astro";
 import Button from "../Button.astro";
 
 import { getCollection, getEntry } from 'astro:content';
-const content = await getCollection('services');
+const content = await getCollection('projects');
 
 interface Props {
 	siteName: string;
@@ -33,12 +33,12 @@ const menuOptions: menuOptionsType[] = [
 		path: `/blog?page=1`
 	},
 	{
-		title: "Services",
+		title: "Projects",
 		path: "/",
 		children: content.map(entry => {
 			return {
 				title: entry.data.title,
-				path: `/services/${entry.data.title.toLowerCase()}`,
+				path: `/projects/${entry.data.title.toLowerCase()}`,
 			}
 		})
 	},
@@ -64,10 +64,25 @@ const menuOptions: menuOptionsType[] = [
 		{
 			logo != undefined && (
 				<>
-					<img
-						src={logo}
-						alt=''
-					/>
+				<svg
+				fill='#000000'
+				width='800px'
+				height='800px'
+				viewBox='0 0 32 32'
+				version='1.1'
+				xmlns='http://www.w3.org/2000/svg'
+			>
+				<title>pen</title>
+				<path
+					d='M6.625 18.044l-3.263 9.936 4.361-4.377c-0.3-0.757-0.226-2.050 0.387-2.662 0.821-0.822 2.173-0.803 2.994 0.019s0.866 2.198 0.045 3.020c-0.625 0.625-1.998 0.661-2.764 0.337l-4.323 4.335 9.701-3.408 3.533-6.364-4.304-4.246-6.367 3.41zM22.981 3.349c0 0-6.011 6.010-6.938 6.938-0.929 0.928-1.414 4.419-1.414 4.419l2.695 2.696c0 0 3.403-0.486 4.375-1.459s6.938-6.938 6.938-6.938l-5.656-5.656z'
+					
+				></path>
+				<style>
+					path {
+						fill: var(--ui-text-low-contrast);
+					}
+				</style>
+			</svg>
 					{showSiteName && <div>{siteName}</div>}
 				</>
 			)
@@ -75,15 +90,20 @@ const menuOptions: menuOptionsType[] = [
 		{logo == undefined && <div>{siteName}</div>}
 	</div>
 	<DesktopNav menuOptions={menuOptions} />
-	<Button colour="primary" hideBorder>
-		<a href='tel:17805320369' class="mobile-hidden contact">1.780.532.0369</a>
+	<Button colour="accent" hideBorder>
+		<a href='tel:15878963349' class="mobile-hidden contact">1.587.896.3349</a>
 	</Button>
 	<MobileNav menuOptions={menuOptions} />
 </header>
 
 <style>
 	.contact {
-		color: white;
+		color: black;
 		text-decoration: none;
+	}
+
+	svg {
+		width: 48px;
+		height: auto;
 	}
 </style>
