--- a/src/components/Hero/HeroPhotoAndText.astro
+++ b/src/components/Hero/HeroPhotoAndText.astro
@@ -2,13 +2,14 @@
 import { Image } from "astro:assets";
 import hero from "../../assets/images/hero.webp";
 import Button from "../Button.astro";
+import background from '../../assets/images/hero_background.webp'
 ---
 
-<div class='hero'>
-	<div class='container'>
+<div class='hero background'>
+	<div class='container '>
 		<div>
 			<p class='text1'>
-				Bringing <strong>elegance</strong> to your space
+				Bringing <strong>elegance</strong> to your website.
 			</p>
 			<div class='flex-row'>
 				<Button
@@ -39,9 +40,14 @@ import Button from "../Button.astro";
 	</div>
 </div>
 
-<style>
+<style define:vars={{backgroundURL: `url(${background.src})`}}>
 	.hero {
 		color: var(--ui-text-low-contrast);
+	}
+
+	.background {
+
+		background-color: var(--ui-bg);
 	}
 
 	strong {
@@ -85,7 +91,7 @@ import Button from "../Button.astro";
 
 	@media only screen and (min-width: 1024px) {
 		.hero {
-			background-color: var(--ui-element-bg);
+			background-color: var(--ui-bg);
 			box-shadow: var(--shadow-lg);
 		}
 
