--- a/src/pages/projects/[...slug].astro
+++ b/src/pages/projects/[...slug].astro
@@ -5,8 +5,8 @@ import { Image } from "astro:assets";
 
 // 1. Generate a new path for every collection entry
 export async function getStaticPaths() {
-	const services = await getCollection("services");
-	return services.map((entry) => ({
+	const projects = await getCollection("projects");
+	return projects.map((entry) => ({
 		params: { slug: entry.data.title.toLowerCase() },
 		props: { entry },
 	}));
