Documentation fix, hover colors fixed

--- a/src/components/Footer/FooterList.astro
+++ b/src/components/Footer/FooterList.astro
@@ -66,6 +66,10 @@ const { data } = Astro.props;
         align-items: center;
 	}
 
+	a:hover {
+		color: var(--primary);
+	}
+
     a > svg {
         width: 1rem;
         height: auto;
