--- a/src/components/Header/DesktopNav/DesktopNav.astro
+++ b/src/components/Header/DesktopNav/DesktopNav.astro
@@ -98,7 +98,7 @@ const { menuOptions } = Astro.props;
 	}
 
 	.link:hover, .link:focus {
-		color: var(--primary-11);
+		color: var(--primary);
 		font-weight: 600;
 	}
 
