--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -90,9 +90,11 @@ const menuOptions: menuOptionsType[] = [
 		{logo == undefined && <div>{siteName}</div>}
 	</div>
 	<DesktopNav menuOptions={menuOptions} />
-	<Button colour="accent" hideBorder>
-		<a href='tel:15878963349' class="mobile-hidden contact">1.587.896.3349</a>
-	</Button>
+	<div class="mobile-hidden">
+		<Button colour="accent" hideBorder>
+			<a href='tel:15878963349' class="mobile-hidden contact">1.587.896.3349</a>
+		</Button>
+	</div>
 	<MobileNav menuOptions={menuOptions} />
 </header>
 
