--- a/src/components/Services/ServicesCards.astro
+++ b/src/components/Services/ServicesCards.astro
@@ -18,7 +18,7 @@ const { cardSize = { width: "200px", height: "250px" } } = Astro.props;
 
 
 ---
-
+<!-- Creates a grid of cards -->
 <div class='container feature-grid'>
 	{
 		content.map((item) => {
