--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -108,4 +108,10 @@ const menuOptions: menuOptionsType[] = [
 		width: 48px;
 		height: auto;
 	}
+
+  @media only screen and (min-width: 1024px) {
+      header {
+      height: 300px;
+    }
+  }
 </style>
