--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -111,7 +111,7 @@ const menuOptions: menuOptionsType[] = [
 
   @media only screen and (min-width: 1024px) {
       header {
-      height: 300px;
+      height: var(--header-height);
     }
   }
 </style>
