--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -23,35 +23,35 @@ interface itemList {
 const { siteName, logo, showSiteName = true } = Astro.props;
 
 const services: itemList = {
-	heading: "Projects",
-	items: projectsCollection.map((item) => {
-		return {
-			text: item.data.title,
-			url: `/projects/${item.data.title.toLowerCase()}`,
-		};
-	}),
+  heading: "Projects",
+  items: projectsCollection.map((item) => {
+    return {
+      text: item.data.title,
+      url: `/projects/${item.data.title.toLowerCase()}`,
+    };
+  }),
 };
 
 const navigation = {
-	heading: "Navigation",
-	items: [
-		{
-			text: "Home",
-			url: "/",
-		},
-		{
-			text: "Blog",
-			url: "/blog?page=1",
-		},
-		{
-			text: "About Us",
-			url: "/",
-		},
-		{
-			text: "Contact Us",
-			url: "/",
-		},
-	],
+  heading: "Navigation",
+  items: [
+    {
+      text: "Home",
+      url: "/",
+    },
+    {
+      text: "Blog",
+      url: "/blog/page=1",
+    },
+    {
+      text: "About Us",
+      url: "/about-us",
+    },
+    {
+      text: "Contact Us",
+      url: "/",
+    },
+  ],
 };
 
 const socials = {
@@ -76,35 +76,34 @@ const socials = {
 };
 ---
 
-<footer class='footer'>
-	<div class='flex-responsive container'>
-		<div class='logo'>
-			<!--?xml version="1.0" encoding="utf-8"?-->
-			<!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
-			<svg
-				fill='#000000'
-				width='800px'
-				height='800px'
-				viewBox='0 0 32 32'
-				version='1.1'
-				xmlns='http://www.w3.org/2000/svg'
-			>
-				<title>pen</title>
-				<path
-					d='M6.625 18.044l-3.263 9.936 4.361-4.377c-0.3-0.757-0.226-2.050 0.387-2.662 0.821-0.822 2.173-0.803 2.994 0.019s0.866 2.198 0.045 3.020c-0.625 0.625-1.998 0.661-2.764 0.337l-4.323 4.335 9.701-3.408 3.533-6.364-4.304-4.246-6.367 3.41zM22.981 3.349c0 0-6.011 6.010-6.938 6.938-0.929 0.928-1.414 4.419-1.414 4.419l2.695 2.696c0 0 3.403-0.486 4.375-1.459s6.938-6.938 6.938-6.938l-5.656-5.656z'
-					
-				></path>
-				<style>
-					path {
-						fill: var(--ui-text-low-contrast);
-					}
-				</style>
-			</svg>
-			<div class='flex-column'>
-				{showSiteName && <div>{siteName}</div>}
-				<p>Copyright 2023 Chartley Designs</p>
-			</div>
-		</div>
+<footer class="footer">
+  <div class="flex-responsive container">
+    <div class="logo">
+      <!--?xml version="1.0" encoding="utf-8"?-->
+      <!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+      <svg
+        fill="#000000"
+        width="800px"
+        height="800px"
+        viewBox="0 0 32 32"
+        version="1.1"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <title>pen</title>
+        <path
+          d="M6.625 18.044l-3.263 9.936 4.361-4.377c-0.3-0.757-0.226-2.050 0.387-2.662 0.821-0.822 2.173-0.803 2.994 0.019s0.866 2.198 0.045 3.020c-0.625 0.625-1.998 0.661-2.764 0.337l-4.323 4.335 9.701-3.408 3.533-6.364-4.304-4.246-6.367 3.41zM22.981 3.349c0 0-6.011 6.010-6.938 6.938-0.929 0.928-1.414 4.419-1.414 4.419l2.695 2.696c0 0 3.403-0.486 4.375-1.459s6.938-6.938 6.938-6.938l-5.656-5.656z"
+        ></path>
+        <style>
+          path {
+            fill: var(--ui-text-low-contrast);
+          }
+        </style>
+      </svg>
+      <div class="flex-column">
+        {showSiteName && <div>{siteName}</div>}
+        <p>Copyright 2023 Chartley Designs</p>
+      </div>
+    </div>
 
     <div class="grid">
       <FooterList data={navigation} />
