change a couple minor things on front page
- Update contact link in hero
- Change card game graphic on flip card
- etc

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -51,8 +51,8 @@ const menuOptions: menuOptionsType[] = [
 				path: "/about-us",
 			},
 			{
-				title: "Contact Us",
-				path: "/",
+				title: "Contact me",
+				path: "/contact-me",
 			},
 		],
 	},
