--- a/src/components/Hero/HeroPhotoAndText.astro
+++ b/src/components/Hero/HeroPhotoAndText.astro
@@ -13,10 +13,7 @@ import background from "../../assets/images/hero_background.webp";
       </p>
       <div class="flex-row">
         <Button colour="primary" hideBackground>
-          <a href=""> Learn More</a>
-        </Button>
-        <Button colour="primary" hideBorder>
-          <a href="" class="dark-theme" style="color: white"> Call Now</a>
+          <a href="/contact-me">Get in touch</a>
         </Button>
       </div>
     </div>
