Update footer and anchor style

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -49,8 +49,8 @@ const navigation = {
       url: "/about-us",
     },
     {
-      text: "Contact Us",
-      url: "/contact-us",
+      text: "Contact Me",
+      url: "/contact-me",
     },
   ],
 };
@@ -119,19 +119,11 @@ const socials = {
       <FooterList data={socials} />
     </div>
   </div>
-
-  <div class="grid">
-    <FooterList data={navigation} />
-
-    <FooterList data={services} />
-
-    <FooterList data={socials} />
+  <div class="bottom-text">
+    <hr />
+     Designed by Chartley
   </div>
-</div>
-<div class="bottom-text">
-  <hr />
-   Designed by Chartley
-</div>
+</footer>
 
 <style>
   /* Change background of footer here */
