--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -37,8 +37,15 @@ p {
   color: var(--ui-text-low-contrast);
 }
 
+a {
+  text-decoration: none;
+  color: var(--ui-text-high-contrast);
+}
+
 a:hover {
   color: var(--primary);
+  text-decoration: underline;
+  cursor: pointer;
 }
 
 button {
