Add wording changes, new photo, link fix

--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -45,11 +45,11 @@ const navigation = {
       url: "/blog/page=1",
     },
     {
-      text: "About Us",
-      url: "/about-us",
+      text: "About me",
+      url: "/about-me",
     },
     {
-      text: "Contact Me",
+      text: "Contact me",
       url: "/contact-me",
     },
   ],
