--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -47,8 +47,8 @@ const menuOptions: menuOptionsType[] = [
 		path: "/",
 		children: [
 			{
-				title: "About Us",
-				path: "/about-us",
+				title: "About me",
+				path: "/about-me",
 			},
 			{
 				title: "Contact me",
@@ -92,7 +92,7 @@ const menuOptions: menuOptionsType[] = [
 	<DesktopNav menuOptions={menuOptions} />
 	<div class="mobile-hidden">
 		<Button colour="accent" hideBorder>
-			<a href='tel:15878963349' class="mobile-hidden contact">1.587.896.3349</a>
+			<a href='/contact-me' class="mobile-hidden contact">Get in touch!</a>
 		</Button>
 	</div>
 	<MobileNav menuOptions={menuOptions} />
