--- a/src/pages/contact-me.astro
+++ b/src/pages/contact-me.astro
@@ -11,7 +11,7 @@ const social = summary.social;
 <Layout title="Welcome to Astro.">
   <div class="container">
     <!-- Contact Info -->
-    <h2>Contact Us</h2>
+    <h2>Contact Me</h2>
     {
       contact && (
         <div>
