--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -60,7 +60,7 @@ const socials = {
   heading: "Social Media",
   items: [
     {
-      text: "Formerly Twitter",
+      text: "Twitter",
       url: summary.social?.twitter?.url,
       badge: "twitter-x",
     },
@@ -68,16 +68,6 @@ const socials = {
       text: "Instagram",
       url: summary.social?.instagram?.url || "/",
       badge: "ri:instagram-fill",
-    },
-    {
-      text: "Facebook",
-      url: summary.social?.facebook?.url || "/",
-      badge: "simple-icons:facebook",
-    },
-    {
-      text: "Youtube",
-      url: summary.social?.youtube?.url || "/",
-      badge: "youtube",
     },
     {
       text: "LinkedIn",
