--- a/src/components/ContactInfo.astro
+++ b/src/components/ContactInfo.astro
@@ -31,6 +31,14 @@ interface contactType {
             </>
           </div>
         )}
+        {contact.resume && (
+          <div class="contact_wrapper">
+            <>
+              <Icon name="resume" size={24} />
+              <a href={contact.resume}>My Resume</a>
+            </>
+          </div>
+        )}
       </div>
     )
   }
