Add a grid of icons and text for programming languages

--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -40,6 +40,7 @@ const social = summary.social;
     <!-- Our Team -->
     <h2>Our Team</h2>
     <OurTeam cardSize={{ width: "200px", height: "300px" }} />
+    <ProgrammingLanguages />
 
     <!-- Endorsements -->
     <h2>Endorsements</h2>
