--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -30,7 +30,18 @@ h2 {
   margin: var(--spacing-md) 0;
 }
 
+h3 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+h4 {
+  font-style: italic;
+  margin-top: 0.25rem;
+}
+
 p {
+  margin: 0.5rem 0 0.5rem 0;
   max-width: 70ch;
   line-height: 1.6;
   font-size: 16px;
