--- a/src/components/Footer/Footer.astro
+++ b/src/components/Footer/Footer.astro
@@ -91,6 +91,11 @@ const contact = {
       url: summary.contact?.resume,
       badge: "resume",
     },
+    {
+      text: "Github",
+      url: summary.contact?.github,
+      badge: "github",
+    },
   ],
 };
 ---
@@ -234,6 +239,18 @@ const contact = {
     .bottom-text {
       grid-row: -1;
       justify-self: center;
+    }
+  }
+
+  @media (prefers-color-scheme: dark) {
+    footer {
+      border-top: 2px solid;
+      border-image-slice: 1;
+      border-image-source: linear-gradient(
+        to left,
+        var(--primary),
+        var(--accent)
+      );
     }
   }
 </style>
