--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,133 +1,130 @@
 ---
 interface Props {
-	colour: "primary" | "accent" | "none";
-	hideBackground?: true | false;
-	hideBorder?: true | false;
+  colour: "primary" | "accent" | "none";
+  hideBackground?: true | false;
+  hideBorder?: true | false;
 }
 
 const { colour, hideBackground = false, hideBorder = false } = Astro.props;
 ---
 
 <div class:list={[`btn ${colour}`, { hideBackground }, { hideBorder }]}>
-	<slot />
+  <slot />
 </div>
 
 <style>
-	.btn {
-		/* BG modification factor when hovered */
-		--hover-bg: 1.3;
-		/* Border modification colour */
-		--lightness-border-modifier: 0.8;
-		/* Border modification factor when hovered */
-		--hover-lightness-border-modifier: 0.6;
-		--border-thickness: 3px;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		padding: 0.25rem 1rem;
-		width: max-content;
-		height: 44px;
-		border-radius: var(--button-radius);
-		transition-duration: 0.3s;
-		color: var(--ui-text-high-contrast);
-		font-weight: 900;
+  .btn {
+    /* BG modification factor when hovered */
+    --hover-bg: 1.3;
+    /* Border modification colour */
+    --lightness-border-modifier: 0.8;
+    /* Border modification factor when hovered */
+    --hover-lightness-border-modifier: 0.6;
+    --border-thickness: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.25rem 1rem;
+    width: max-content;
+    height: 44px;
+    border-radius: var(--button-radius);
+    transition-duration: 0.3s;
+    color: var(--ui-text-high-contrast);
+    font-weight: 900;
 
-		--border-shadow: var(--border-thickness) var(--border-thickness) 0 inset
-				var(--border-color),
-			calc(var(--border-thickness) * -1)
-				calc(var(--border-thickness) * -1) 0 inset var(--border-color),
-			var(--border-thickness) calc(var(--border-thickness) * -1) 0 inset
-				var(--border-color),
-			calc(var(--border-thickness) * -1) var(--border-thickness) 0 inset
-				var(--border-color);
-		box-shadow: var(--border-shadow);
-	}
+    --border-shadow: var(--border-thickness) var(--border-thickness) 0 inset
+        var(--border-color),
+      calc(var(--border-thickness) * -1) calc(var(--border-thickness) * -1) 0
+        inset var(--border-color),
+      var(--border-thickness) calc(var(--border-thickness) * -1) 0 inset
+        var(--border-color),
+      calc(var(--border-thickness) * -1) var(--border-thickness) 0 inset
+        var(--border-color);
+    box-shadow: var(--border-shadow);
+  }
 
-	.btn:hover {
-		transition-duration: 0.3s;
-		box-shadow: var(--border-shadow);
-	}
+  .btn:hover {
+    transition-duration: 0.3s;
+    box-shadow: var(--border-shadow);
+  }
 
-	.none {
-		background-color: var(--ui-element-bg);
-		--border-color: var(--ui-border);
-		color: var(--ui-text-low-contrast);
-	}
+  .none {
+    background-color: var(--ui-element-bg);
+    --border-color: var(--ui-border);
+    color: var(--ui-text-low-contrast);
+  }
 
-	.none:hover {
-		background-color: var(--ui-element-bg-hovered);
-		--border-color: var(--ui-border-hovered);
-	}
+  .none:hover {
+    background-color: var(--ui-element-bg-hovered);
+    --border-color: var(--ui-border-hovered);
+  }
 
-	.primary {
-		background-color: var(--primary);
-		--border-color: hsl(
-			var(--primary-hue),
-			var(--primary-saturation),
-			calc(var(--primary-lightness) * var(--lightness-border-modifier))
-		);
-		color: white;
-	}
+  .primary {
+    background-color: var(--primary);
+    --border-color: hsl(
+      var(--primary-hue),
+      var(--primary-saturation),
+      calc(var(--primary-lightness) * var(--lightness-border-modifier))
+    );
+    color: black;
+    transition-duration: 0.3s;
+  }
 
-	.primary:hover {
-		background-color: hsl(
-			var(--primary-hue),
-			var(--primary-saturation),
-			calc(var(--primary-lightness) * var(--hover-bg))
-		);
-		--border-color: hsl(
-			var(--primary-hue),
-			var(--primary-saturation),
-			calc(
-				var(--primary-lightness) *
-					var(--hover-lightness-border-modifier)
-			)
-		);
-	}
+  .primary:hover {
+    background-color: hsl(
+      var(--primary-hue),
+      var(--primary-saturation),
+      calc(var(--primary-lightness) * var(--hover-bg))
+    );
+    transform: scale(1.05);
+    transition-duration: 0.3s;
+    --border-color: hsl(
+      var(--primary-hue),
+      var(--primary-saturation),
+      calc(var(--primary-lightness) * var(--hover-lightness-border-modifier))
+    );
+  }
 
-	.accent {
-		background-color: var(--accent);
-		--border-color: hsl(
-			var(--accent-hue),
-			var(--accent-saturation),
-			calc(var(--accent-lightness) * var(--lightness-border-modifier))
-		);
-	}
+  .accent {
+    background-color: var(--accent);
+    --border-color: hsl(
+      var(--accent-hue),
+      var(--accent-saturation),
+      calc(var(--accent-lightness) * var(--lightness-border-modifier))
+    );
+  }
 
-	.accent:hover {
-		background-color: hsl(
-			var(--accent-hue),
-			var(--accent-saturation),
-			calc(var(--accent-lightness) * var(--hover-bg))
-		);
-		--border-color: hsl(
-			var(--accent-hue),
-			var(--accent-saturation),
-			calc(
-				var(--accent-lightness) *
-					var(--hover-lightness-border-modifier)
-			)
-		);
-	}
+  .accent:hover {
+    background-color: hsl(
+      var(--accent-hue),
+      var(--accent-saturation),
+      calc(var(--accent-lightness) * var(--hover-bg))
+    );
+    --border-color: hsl(
+      var(--accent-hue),
+      var(--accent-saturation),
+      calc(var(--accent-lightness) * var(--hover-lightness-border-modifier))
+    );
+  }
 
-	.hideBackground {
-		background: none;
-		color: var(--ui-text-low-contrast);
-	}
+  .hideBackground {
+    background: none;
+    color: var(--ui-text-low-contrast);
+  }
 
-	.hideBackground:hover,
-	.hideBackground:focus {
-		background: none;
-	}
+  .hideBackground:hover,
+  .hideBackground:focus {
+    background: none;
+  }
 
-	.hideBorder {
-		--border-shadow: none;
-		border: none;
-	}
+  .hideBorder {
+    --border-shadow: none;
+    border: none;
+  }
 
-	.hideBorder:hover,
-	.hideBorder:focus {
-		--border-shadow: none;
-		box-shadow: none;
-	}
+  .hideBorder:hover,
+  .hideBorder:focus {
+    --border-shadow: none;
+    box-shadow: none;
+  }
 </style>
