Polish for deploying forms

--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -6,7 +6,7 @@ import Socials from "../components/Socials.astro";
 import ProgrammingLanguages from "../components/ProgrammingLanguages.astro";
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout title="About Me">
   <div class="container">
     <h1>About me</h1>
     <h2>Who am I?</h2>
@@ -65,7 +65,7 @@ import ProgrammingLanguages from "../components/ProgrammingLanguages.astro";
       Most of what I use is centered around web development. As a hobby, I
       explore other languages for game development or other curious endeavours.
     </p>
-    <ProgrammingLanguages />
+    <ProgrammingLanguages coloredIcons={false} />
 
     <h3>Hardware</h3>
     <p>
