Fix photo size on front page, correct font color in form

--- a/src/components/ContactForm.astro
+++ b/src/components/ContactForm.astro
@@ -44,6 +44,7 @@ import Button from "./Button.astro";
   textarea {
     border: none;
     margin-bottom: 0.5rem;
+    color: var(--ui-text-low-contrast);
   }
 
   textarea {
