--- a/src/components/Hero/HeroPhotoAndText.astro
+++ b/src/components/Hero/HeroPhotoAndText.astro
@@ -17,7 +17,7 @@ import background from "../../assets/images/hero_background.webp";
         </Button>
       </div>
     </div>
-    <Image src={hero} alt="Hero Image" class="hero" />
+    <Image src={hero} alt="Hero Image" class="hero" width={500} height={500} />
   </div>
 </div>
 
