make code blocks look a little nicer. Add padding and round corners

--- a/src/layouts/Layout_BlogPost.astro
+++ b/src/layouts/Layout_BlogPost.astro
@@ -38,4 +38,9 @@ const { frontmatter } = Astro.props;
     font-size: 1.25rem;
     color: var(--ui-text-low-contrast);
   }
+
+  pre {
+    padding: 1rem;
+    border-radius: var(--radius-sm);
+  }
 </style>
