--- a/src/components/Cards/Card.astro
+++ b/src/components/Cards/Card.astro
@@ -1,36 +1,39 @@
 ---
 interface Props {
-	
+  width: string;
+  height: string;
 }
 
-const {} = Astro.props;
+const { width, height } = Astro.props;
 ---
 
 <div class="card">
-	<slot />
+  <slot />
 </div>
 
-<style>
-	.card {
-		height: 100%;
-		background-color: var(--ui-element-bg);
-		color: var(--ui-text-high-contrast);
+<style define:vars={{ width: width, height: height }}>
+  .card {
+    padding: var(--spacing-sm);
+    width: 100%;
+    height: var(--height);
+    background-color: var(--ui-element-bg);
+    color: var(--ui-text-high-contrast);
 
-		border-radius: var(--radius-sm);
-		box-sizing: border-box;
-		box-shadow: var(--shadow-md);
-		font-size: 20px;
-		justify-self: center;
+    border-radius: var(--radius-sm);
+    box-sizing: border-box;
+    box-shadow: var(--shadow-md);
+    font-size: 20px;
+    justify-self: center;
 
-		transition-duration: 0.3s;
-	}
+    transition-duration: 0.3s;
+  }
 
-	.card:hover {
-		background-color: var(--ui-element-bg-hovered);
-		box-shadow:
-			var(--ui-border-hovered) 0px 1px 2px inset,
-			var(--ui-border-hovered) 0px 0px 0px 2px inset,
-			var(--shadow-md);
-		transition-duration: 0.3s;
-	}
+  .card:hover {
+    background-color: var(--ui-element-bg-hovered);
+    box-shadow:
+      var(--ui-border-hovered) 0px 1px 2px inset,
+      var(--ui-border-hovered) 0px 0px 0px 2px inset,
+      var(--shadow-md);
+    transition-duration: 0.3s;
+  }
 </style>
